# kifuviewer

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build-installers.yml  ci.yml  release-installers.yml
src/: App.svelte  app.css  global.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/sgf/: parser.rs  serializer.rs  types.rs
src/lib/audio/: moveSound.ts
src/lib/components/: BoardCanvas.svelte  ConfirmModal.svelte  InfoPanel.svelte  PlaybackControls.svelte  VariationPanel.svelte
src/lib/logic/: rules.ts
src/lib/sgf/: normalize.ts  serializer.ts
src/lib/stores/: board.ts  playback.ts  sgf.ts  ui.ts
src/lib/tauri/: commands.ts
src/lib/types/: board.ts  sgf.ts
